src/scss/landing.scss
.carousel-item {
    min-height: 600px !important;
    max-height: 600px !important;
}
.landing {
    
    height: 600px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    
    

    &--1 {
        background:linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.6)), url("/assets/images/landing3.jpg")center/cover fixed no-repeat;    width: 100%;
    }
    &--2 {
        background:linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.6)), url("/assets/images/bihac2.jpg")center/cover fixed no-repeat;    width: 100%;
    }
    &--3 {
        background:linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.6)), url("/assets/images/bihac3.jpg")center/cover fixed no-repeat;    width: 100%;
    }

}

.landing__h1 {
    color: #fff;
    font-size: 5rem;
    font-weight: bold;

   
}


@media screen and (max-width: 850px) {
    .landing__h1 { 
   font-size: 4rem;
   margin: 0 1rem;
    }
}
@media screen and (max-width: 460px) {
    .landing__h1 { 
   font-size: 3.4rem;
  
    }
}
.landing__h3 {
    color: #fff;
    font-size: 3rem;
    font-weight: bold;
  
}

@media screen and (max-width: 850px) {
    .landing__h3 { 
   font-size: 2.5rem;
   margin: 0 1rem;
    } 

}

@media screen and (max-width: 460px) {
    .landing__h3 { 
   font-size: 2rem;
  
    }
}
.landing__btn {
    margin-top: 3rem;
}

.carousel-indicators .active {
    background-color: #43BC9D;
}

